# librsvg

./: .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  .rumdl.toml  .rustfmt.toml  .travis.yml  AGENTS.md  AI_CODE_ANALYSIS_EVALUATION.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  COMPILING.md  CONTRIBUTING.md  Cargo.toml  ChangeLog  ChangeLog.old  FEATURES.md  Gir.toml  INSTALL  MAINTAINERS  Makefile  Makefile.am  NEWS  NEWS.md  README  README.CVS  README.md  RELEASING.md  Release_notes-2.11  Rsvg-2.0-custom.vala  Rsvg-2.0.metadata  SECURITY.md  TODO  acinclude.m4  appveyor.yml  art_render.c  art_render.h  art_render_gradient.c  art_render_gradient.h  (+120 more)
afl-fuzz/: Cargo.toml  README.md
afl-fuzz/src/: main.rs
ci/: Cargo.toml  build-dependencies.sh  build-with-coverage.sh  check_crate_versions_in_example.py  check_docs_links.sh  check_project_version.py  check_public_crate_version.py  check_rsvg_convert_options.rs  check_rust_versions.py  check_shell_scripts.sh  container_builds.yml  env.sh  gen-coverage.sh  gen-devel-docs.sh  gen-rust-docs.sh  install-cargo-cbuild.sh  install-grcov.sh  install-python-tools.sh  install-rust-linters.sh  install-rust-tools.sh  install-rust.sh  msvc-requirements.txt  pages-index.html  pkgconfig.nmake.patch  pull-container-image.sh  pyproject.toml  requirements.txt  setup-dependencies-env.sh  test-msvc.bat  test-msys2.sh  utils.py
doc/: .cvsignore  Makefile.am  librsvg.toml  load-and-render.c  meson.build  migrating.md  migrating.xml  overview.md  overview.xml  recommendations.md  recommendations.xml  rsvg-docs.sgml  rsvg-docs.xml  rsvg-sections.txt  rsvg.types  urlmap.js
doc/tmpl/: rsvg-file-util.sgml  rsvg-gz.sgml  rsvg-unused.sgml  rsvg.sgml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_target_1.rs  render_document.rs
gdk-pixbuf-loader/: Cargo.toml  Makefile.am  build.rs  gdk-pixbuf-loader.symbols  io-svg.c  librsvg.thumbnailer.in  meson.build  meson_install.py  test.c
gdk-pixbuf-loader/src/: lib.rs
gimp-plugin/: .cvsignore  Makefile.am  README
gtk-engine/: ChangeLog  Makefile.am  README  pixbuf-draw.c  pixbuf-main.c  pixbuf-rc-style.c  pixbuf-render.c  pixbuf.h  svg-draw.c  svg-main.c  svg-rc-style.c  svg-rc-style.h  svg-render.c  svg-style.h  svg.h
gtk-engine/examples/: Makefile.am
librsvg/: Cargo.toml  build.rs  c_api.rs  color_utils.rs  dpi.rs  lib.rs  librsvg-features.c  librsvg-features.h  librsvg-features.h.in  messages.rs  pixbuf_utils.rs  rsvg-attributes.h  rsvg-base-file-util.c  rsvg-base.c  rsvg-cairo-clip.c  rsvg-cairo-draw.c  rsvg-cairo-draw.h  rsvg-cairo-render.c  rsvg-cairo-render.h  rsvg-cairo.h  rsvg-cond.c  rsvg-css.c  rsvg-css.h  rsvg-defs.c  rsvg-defs.h  rsvg-drawing-ctx.c  rsvg-drawing-ctx.h  rsvg-file-util.c  rsvg-filter.c  rsvg-filter.h  rsvg-handle.c  rsvg-io.c  rsvg-io.h  rsvg-load.c  rsvg-load.h  rsvg-mask.h  rsvg-paint-server.h  rsvg-path-builder.h  rsvg-pixbuf.c  rsvg-private.h  (+11 more)
librsvg-c/: COPYING.LIB  Cargo.toml  build.rs  meson.build
librsvg-c/src/: dpi.rs  handle.rs  lib.rs  messages.rs  pixbuf_utils.rs  sizing.rs
librsvg-c/tests/: legacy_sizing.rs
librsvg-c/tests-c/: Makefile.am  api.c  meson.build  test-utils.c  test-utils.h
librsvg/benches/: pixbuf_from_surface.rs
librsvg/filters/: blend.c  color_matrix.c  common.c  common.h  component_transfer.c  composite.c  convolve_matrix.c  diffuse_lighting.c  displacement_map.c  erode.c  flood.c  gaussian_blur.c  image.c  light_source.c  light_source.h  merge.c  offset.c  specular_lighting.c  tile.c  turbulence.c
librsvg_crate/: Cargo.toml  build.rs
librsvg_crate/examples/: proportional.rs  render.rs  render_to_file.rs
librsvg_crate/src/: lib.rs
librsvg_crate/tests/: api.rs  bugs.rs  compare_surfaces.rs  intrinsic-dimensions.rs  intrinsic_dimensions.rs  primitives.rs  render_to_viewport.rs
moz-plugin/: Makefile.am  moz-plugin.c
pango-examples/: Cargo.toml  build.rs
pango-examples/src/: example_1_trivial.rs  example_2_attributes.rs  example_3_glyphs.rs
rsvg/: Cargo.toml  README.md  build.rs  meson.build
rsvg-bench/: Cargo.toml
rsvg-bench/src/: main.rs
rsvg-convert/: Cargo.toml
rsvg-convert/src/: main.rs
rsvg-convert/tests/: fixtures  rsvg_convert.rs
rsvg-sys/: Cargo.toml  Gir.toml  build.rs
rsvg-sys/src/: lib.rs
rsvg/benches/: box_blur.rs  composite.rs  lighting.rs  path_parser.rs  pixbuf_from_surface.rs  pixel_iterators.rs  pixel_ops.rs  srgb.rs  surface_from_pixbuf.rs
rsvg/src/: accept_language.rs  angle.rs  api.rs  aspect_ratio.rs  bbox.rs  cairo_path.rs  color.rs  cond.rs  coord_units.rs  css.rs  dasharray.rs  document.rs  dpi.rs  drawing_ctx.rs  element.rs  error.rs  filter.rs  filter_func.rs  float_eq_cairo.rs  font_props.rs  gradient.rs  handle.rs  href.rs  image.rs  io.rs  layout.rs  length.rs  lib.rs  limits.rs  log.rs  marker.rs  node.rs  paint_server.rs  parsers.rs  path_builder.rs  path_parser.rs  pattern.rs  properties.rs  property_defs.rs  property_macros.rs  (+11 more)
rsvg/tests/: README.md  api.c  api.rs  bugs.rs  errors.rs  filters.rs  geometries.rs  intrinsic_dimensions.rs  loading_crash.rs  loading_disallowed.rs  primitive_geometries.rs  primitives.rs  reference.rs  render_crash.rs  text.rs
rsvg_convert/: Cargo.toml  meson.build
rsvg_convert/src/: lib.rs  main.rs
rsvg_convert/tests/: rsvg_convert.rs
rsvg_internals/: Cargo.toml  build.rs  expanded.rs
rsvg_internals/benches/: box_blur.rs  composite.rs  lighting.rs  path_parser.rs  pixel_iterators.rs  pixel_ops.rs  srgb.rs  surface_from_pixbuf.rs
rsvg_internals/src/: allowed_url.rs  angle.rs  aspect_ratio.rs  attributes.rs  bbox.rs  c_api.rs  chars.rs  clip_path.rs  cnode.rs  color.rs  cond.rs  coord_units.rs  create_node.rs  croco.rs  css.rs  dasharray.rs  defs.rs  document.rs  dpi.rs  draw.rs  drawing_ctx.rs  element.rs  error.rs  filter.rs  filter_context.rs  float_eq_cairo.rs  font_props.rs  gradient.rs  handle.rs  href.rs  image.rs  io.rs  iri.rs  length.rs  lib.rs  limits.rs  link.rs  load.rs  log.rs  marker.rs  (+38 more)
rust/: Cargo.toml  build.rs  meson.build
rust/rsvg_internals/: Cargo.toml
rust/src/: aspect_ratio.rs  attributes.rs  (+37 more)
(+477 files in other folders)
