[workspace.package]
version = "2.58.0"
authors = ["Federico Mena Quintero <federico@gnome.org>", "Many others"]
description = """
A library to render SVG images to Cairo surfaces. GNOME uses this to
render SVG icons. Outside of GNOME, other desktop environments use it
for similar purposes. Wikimedia uses it for Wikipedia's SVG diagrams.
"""
license = "LGPL-2.1-or-later"
homepage = "https://wiki.gnome.org/Projects/LibRsvg"
repository = "https://gitlab.gnome.org/GNOME/librsvg/"
categories = [ "graphics", "multimedia::images", "rendering::data-formats" ]
keywords = [ "svg", "cairo" ]
edition = "2021"
rust-version = "1.70.0"

[profile.overflow]
inherits = "release"
overflow-checks = true

[workspace]
members = [
    "gdk-pixbuf-loader",
    "librsvg-c",
    "rsvg",
    "rsvg_convert",
    "rsvg-bench",
]
default-members = [
    "rsvg",
    "rsvg_convert",
]
exclude = [
    "afl-fuzz",
    "fuzz",
]
resolver = "2"
